--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -17,14 +17,73 @@
                     <view key="view" contentMode="scaleToFill" id="bsb-bn-ssp">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="rxj-Zd-w0Z">
+                                <rect key="frame" x="10" y="54" width="394" height="221.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="rxj-Zd-w0Z" secondAttribute="height" multiplier="16:9" id="pvp-1X-dKe"/>
+                                </constraints>
+                            </mapView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pul-Po-HHX">
+                                <rect key="frame" x="10" y="295.5" width="394" height="507.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="teamCell" rowHeight="72" id="S18-pO-OcT" customClass="TeamTableViewCell" customModule="The_JBB" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="394" height="72"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="S18-pO-OcT" id="72T-Yz-lbg">
+                                            <rect key="frame" x="0.0" y="0.0" width="363" height="72"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Tb-NF-Cje">
+                                                    <rect key="frame" x="20" y="10" width="52" height="52"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="3Tb-NF-Cje" secondAttribute="height" multiplier="1:1" id="9l8-HL-z2i"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zof-qc-Yjy">
+                                                    <rect key="frame" x="82" y="10" width="271" height="52"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="3Tb-NF-Cje" firstAttribute="centerY" secondItem="72T-Yz-lbg" secondAttribute="centerY" id="QdQ-Ea-Vzn"/>
+                                                <constraint firstAttribute="bottom" secondItem="3Tb-NF-Cje" secondAttribute="bottom" constant="10" id="XyS-an-2sP"/>
+                                                <constraint firstItem="zof-qc-Yjy" firstAttribute="leading" secondItem="3Tb-NF-Cje" secondAttribute="trailing" constant="10" id="eUS-Q5-fQg"/>
+                                                <constraint firstItem="3Tb-NF-Cje" firstAttribute="leading" secondItem="72T-Yz-lbg" secondAttribute="leading" constant="20" symbolic="YES" id="gYV-ID-Dro"/>
+                                                <constraint firstItem="3Tb-NF-Cje" firstAttribute="top" secondItem="72T-Yz-lbg" secondAttribute="top" constant="10" id="gZF-uX-bwY"/>
+                                                <constraint firstItem="zof-qc-Yjy" firstAttribute="top" secondItem="72T-Yz-lbg" secondAttribute="top" constant="10" id="hfd-f2-P2b"/>
+                                                <constraint firstAttribute="trailing" secondItem="zof-qc-Yjy" secondAttribute="trailing" constant="10" id="lzy-Ep-lKR"/>
+                                                <constraint firstAttribute="bottom" secondItem="zof-qc-Yjy" secondAttribute="bottom" constant="10" id="zbX-7J-YtO"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="zof-qc-Yjy" id="wft-xg-arQ"/>
+                                            <outlet property="teamImageView" destination="3Tb-NF-Cje" id="nSt-km-ggp"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="OmU-U6-kby"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rxj-Zd-w0Z" firstAttribute="leading" secondItem="OmU-U6-kby" secondAttribute="leading" constant="10" id="19Q-we-WeE"/>
+                            <constraint firstItem="rxj-Zd-w0Z" firstAttribute="top" secondItem="OmU-U6-kby" secondAttribute="top" constant="10" id="1q1-Qq-Mav"/>
+                            <constraint firstItem="pul-Po-HHX" firstAttribute="top" secondItem="rxj-Zd-w0Z" secondAttribute="bottom" constant="20" id="7aA-BA-6qk"/>
+                            <constraint firstItem="pul-Po-HHX" firstAttribute="leading" secondItem="OmU-U6-kby" secondAttribute="leading" constant="10" id="I6h-qW-Ng4"/>
+                            <constraint firstItem="OmU-U6-kby" firstAttribute="trailing" secondItem="rxj-Zd-w0Z" secondAttribute="trailing" constant="10" id="amR-aH-63y"/>
+                            <constraint firstItem="OmU-U6-kby" firstAttribute="bottom" secondItem="pul-Po-HHX" secondAttribute="bottom" constant="10" id="dkG-NY-HcB"/>
+                            <constraint firstItem="OmU-U6-kby" firstAttribute="trailing" secondItem="pul-Po-HHX" secondAttribute="trailing" constant="10" id="wIl-i7-5Ez"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="bus" catalog="system" id="acY-kT-64o"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tlg-q5-etN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="670" y="345"/>
+            <point key="canvasLocation" x="669.56521739130437" y="344.86607142857139"/>
         </scene>
         <!--Rankings View Controller-->
         <scene sceneID="Fij-nO-gsV">
